# sengine

./: .gitmodules  CMakeLists.txt  README.md  sengine_config.h.in
datafiles/resources/assets/shader/: .default.asset
datafiles/resources/assets/texture/: .default.asset
include/: engine.h  entity.h  shader.h  timer.h
include/assets/: asset.h  asset.hpp  font.hpp  material.hpp  model.h  model.hpp  shader.h  shader.hpp  sound.hpp  sprite.h  sprite.hpp  texture.h  texture.hpp
include/classes/: mesh.hpp  primitive.hpp
include/classes/primitives/: plane.hpp  primitive.hpp
include/components/: camera.hpp  component.h  component.hpp  sprite.h  sprite_renderer_component.h  sprite_renderer_component.hpp  texture_renderer.hpp
include/core/: debug_menu.hpp  engine.h  engine.hpp  engine.tpp  entity.fwd.hpp  entity.h  entity.hpp  entity.tpp  log.hpp  log.tpp  timer.h  timer.hpp
include/datatypes/: asset_info.h  asset_path.h  asset_type.h  bbox.h  clock.h  mesh.h  texture.h  vector2.h  vector3.h
include/enums/: asset_type.hpp  texture_type.hpp
include/enums/input/: input_state.hpp  mouse_button.hpp
include/exceptions/: exception.h  exception.hpp  file_doesnt_exist.hpp  generic.hpp  invalid_arguments.hpp  invalid_template.hpp  logged_error.hpp  not_implemented.hpp
include/loop_runners/: entity_loop_runner.h  entity_loop_runner.hpp  entity_loop_runner.tpp  loop_runner.h  loop_runner.hpp
include/managers/: asset_manager.h  asset_manager.hpp  asset_manager.tpp  asset_manager_OLD.hpp.old  asset_manager_OLD.tpp.old  input_manager.h  input_manager.hpp  manager.hpp  sound_manager.hpp
include/structs/: asset_info.hpp  bbox.h  clock.hpp  colour.hpp  mesh.h  mesh.hpp  primitive_type.hpp  text_character.hpp  texture.hpp  texture_type.hpp  vector2.hpp  vector3.hpp  vertex.hpp
include/structs/assets/: asset_info.h  asset_info.hpp  asset_path.h  asset_type.h  asset_type.hpp
include/structs/input/: input_state.hpp  mouse_button.hpp
include/structs/loop_runners/: loop_runner_type.hpp
include/structs/shaders/: shader_program_data.hpp  shader_uniform_data.hpp
include/utils/: asset_util.hpp  asset_util.tpp  entity_util.hpp  entity_util.tpp  file_util.h  file_util.hpp  model_util.h  model_util.hpp  model_utils.h  string_util.hpp
internal-datafiles/assets/texture/: .default.asset
src/: engine.cpp  glad.c  timer.cpp
src/assets/: asset.cpp  font.cpp  model.cpp  model_NEW.cpp  shader.cpp  sprite.cpp  texture.cpp
src/classes/: mesh.cpp  primitive.cpp
src/classes/primitives/: plane.cpp  primitive.cpp
src/components/: camera.cpp  component.cpp  texture_renderer.cpp
src/core/: engine.cpp  entity.cpp  log.cpp  timer.cpp
src/entities/: entity.cpp
src/exceptions/: exception.cpp
src/loop_runners/: entity_loop_runner.cpp  loop_runner.cpp
src/managers/: asset_manager.cpp  asset_manager_OLD.cpp.old  input_manager.cpp  manager.cpp  sound_manager.cpp
src/stb/: stb.cpp
src/structs/assets/: asset_info.cpp
src/utils/: file_util.cpp  file_utils.cpp  model_util.cpp  model_utils.cpp  string_util.cpp
